--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "iview": "^3.5.4",
+    "postcss": "^7.0.32",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.5.1"
   }
